subheading added to home page

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <h1 class="hero-title">Earth Goddess Skirts</h1>
     <p class="hero-tagline">
-      Handmade with love in Canada<br/>
-      using global artisan fabrics
+      &bull; One of a kind &bull; Plus sized &bull; Natrual materials &bull; Made in Canada &bull;<br/>
+      
     </p>
   </header>
 
