spelling natural quick fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <h1 class="hero-title">Earth Goddess Skirts</h1>
     <p class="hero-tagline">
-      &bull; One of a kind &bull; Plus sized &bull; Natrual materials &bull; Made in Canada &bull;<br/>
+      &bull; One of a kind &bull; Plus sized &bull; Natural materials &bull; Made in Canada &bull;<br/>
       
     </p>
   </header>
