quick fixes to links and styles for footer

--- a/index.html
+++ b/index.html
@@ -35,16 +35,22 @@
   <footer class="footer">
     <ul class="contact-list">
       <li>
-        <img src="img/icon_insta.png" alt="Insta icon" />
+      <a href="https://www.instagram.com/earth_goddess.skirts" target="_blank" rel="noopener">
+        <img src="img/icon_insta.png" alt="Instagram icon" />
         @earth_goddess.skirts
+      </a>
       </li>
       <li>
-        <img src="img/icon_email.png" alt="Email icon" />
-        info@earthgoddessskirts.ca
+        <a href="mailto:info@earthgoddessskirts.ca">
+          <img src="img/icon_email.png" alt="Email icon" />
+          info@earthgoddessskirts.ca
+        </a>
       </li>
       <li>
+      <span class="contact-item">
         <img src="img/icon_web.png" alt="Location icon" />
         Castleton, Ontario, Canada
+      </span>
       </li>
     </ul>
   </footer>
