changed announcement headline

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   </section>
 
   <div class="announcement">
-    <h2>Exciting News! <br>A Seamless Product Purchasing System Is Coming Soon.</h2>
-    <p>Until then, feel free to <a href="mailto:info@earthgoddessskirts.ca">email us</a> with any inquiries.</p>
+    <h2>Our collection will soon be available for direct purchase.</h2>
+    <p>Want to inquire now? Contact us at <a href="mailto:info@earthgoddessskirts.ca">info@earthgoddessskirts.ca</a> </p>
   </div>
 
 
