added scrolling banners

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     </p>
   </header>
 
+<section class="parallax" style="background-image: url('img/banners/fabric01.jpg');"></section>
+  
   <section class="carousel">
     <div class="slider">
       <div class="slides" id="slideContainer"></div>
@@ -41,6 +43,8 @@
     </div>
   </section>
 
+<section class="parallax" style="background-image: url('img/banners/fabric03.jpg');"></section>
+
   <div class="announcement">
     <h2>Our collection will soon be available for direct purchase.</h2>
     <p>Want to inquire now? Contact us at <a href="mailto:info@earthgoddessskirts.ca">info@earthgoddessskirts.ca</a> </p>
@@ -49,6 +53,7 @@
 
 <script src="js/slider.js"></script>
 
+<!-- <section class="parallax" style="background-image: url('img/banners/fabric02.jpg');"></section> -->
 
   <footer class="footer">
     <ul class="contact-list">
